--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,81 @@
-.main{
-   font-family: 'Josefin Sans', sans-serif;
+.main {
+    font-family: 'Josefin Sans', sans-serif;
+    margin-top: 4%;
 }
 
-.header h1{
+header h1 {
     font-size: 60px;
     font-family: 'Arizonia', cursive;
 }
 
-.header h3{
+header h1 > a{
+    text-decoration: none;
+    color: black;
+}
+
+header h1 > a:hover{
+    text-decoration: none;
+}
+
+header h3 {
     font-size: 25px;
     font-family: 'Bungee Shade', cursive;
 }
 
-.social-icons a{
-    color: #2E2A2A;
+
+.social-icons a {
+    color: #000000;
 }
-.content-main{
+
+.content-main {
+    font-family: 'Josefin Sans', sans-serif;
     padding-top: 30px;
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+    margin: 0 auto -155px;
+    /* the bottom margin is the negative value of the footer's height */
 }
 
-.intro{
-   font-size: 30px;
+.intro {
+    font-size: 30px;
     padding-bottom: 30px;
 }
 
-.blocks{
+.blocks {
     padding-bottom: 50px;
 }
 
-.block{
+.block {
     background-color: #ffffff;
     padding-left: 15px;
     padding-top: 60px;
-    padding-right: 15px;     
+    padding-right: 15px;
     padding-bottom: 60px;
     border-radius: 4px;
-    -webkit-box-shadow: -5px 10px 35px 3px rgba(48,45,48,0.36);
--moz-box-shadow: -5px 10px 35px 3px rgba(48,45,48,0.36);
-box-shadow: -5px 10px 35px 3px rgba(48,45,48,0.36);
+    -webkit-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
+    -moz-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
+    box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
 }
 
-.block > h1> a{
+.block > h1> a {
     font-size: 55px;
     text-decoration: none;
     color: black;
 }
-.block > h1> a:hover{
+
+.block > h1> a:hover {
     font-size: 55px;
     text-decoration: none;
     color: #428bca;
+}
+
+
+.blog{
+    margin: 20px;
+}
+
+.blog h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
