--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,9 @@
     font-family: 'Josefin Sans', sans-serif;
     margin-top: 4%;
 }
-
+header{
+margin: 0 auto;
+}
 header h1 {
     font-size: 60px;
     font-family: 'Arizonia', cursive;
@@ -78,4 +80,8 @@ header h3 {
 .blog h1{
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+footer{
+    margin: 0 auto;
 }
