--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     margin-top: 4%;
 }
 header{
-    max-width: 100%;
+    display: block;
 margin: 0 auto;
 }
 header h1 {
@@ -84,6 +84,6 @@ header h3 {
 }
 
 footer{
-    max-width: 100%;
+    display: block;
     margin: 0 auto;
 }
