--- a/css/main.css
+++ b/css/main.css
@@ -3,21 +3,19 @@
     margin-top: 2%;
 }
 
-
-header{
+header {
     font-family: 'Arizonia', cursive;
     color: black;
 }
 
-
-header a{
+header a {
     text-decoration: none;
     color: black;
 }
 
-header a:hover{
-  text-decoration: none;
-  color: #337ab7;
+header a:hover {
+    text-decoration: none;
+    color: #337ab7;
 }
 
 .social-icons a {
@@ -55,33 +53,37 @@ header a:hover{
     box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
 }
 
-
-.block > h1> a {
+.block>h1>a {
     font-size: 55px;
     text-decoration: none;
     color: black;
 }
 
-.block > h1> a:hover {
+.block>h1>a:hover {
     font-size: 55px;
     text-decoration: none;
     color: #428bca;
 }
 
-.proj_block{
-  background-color: #ffffff;
-  padding-left: 15px;
-  padding-top: 40px;
-  padding-right: 15px;
-  padding-bottom: 40px;
-  border-radius: 4px;
-  -webkit-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
-  -moz-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
-  box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
+.proj_block {
+    background-color: #ffffff;
+    padding-left: 15px;
+    padding-top: 40px;
+    padding-right: 15px;
+    padding-bottom: 40px;
+    border-radius: 4px;
+    -webkit-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
+    -moz-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
+    box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
 }
 
-.proj_block a {
+.proj_block a:link {
     font-size: 25px;
+    text-decoration: none;
+    color: black;
+}
+
+.proj_block a:visited {
     text-decoration: none;
     color: black;
 }
@@ -91,17 +93,16 @@ header a:hover{
     color: #428bca;
 }
 
-.proj_block a:after{
-  text-decoration:none;
+.proj_block a:active {
+    text-decoration: none;
+    color: black;
 }
 
-
-
-.blog{
+.blog {
     margin: 20px;
 }
 
-.blog h1{
+.blog h1 {
     margin-top: 20px;
     margin-bottom: 20px;
 }
