--- a/blog/css/pixyll.scss
+++ b/blog/css/pixyll.scss
@@ -10,11 +10,11 @@
 * @license MIT
 */
 
-@import 'variables';
+@import '../variables';
 
-@import 'basscss';
+@import '../basscss';
 
-@import 'base';
+@import '../base';
 
 @import 'links';
 @import 'positions';
