--- a/blog/css/pixyll.scss
+++ b/blog/css/pixyll.scss
@@ -10,26 +10,26 @@
 * @license MIT
 */
 
-@import '../blog/_sass/variables';
+@import '../_sass/variables';
 
-@import '../blog/_sass/basscss';
+@import '../_sass/basscss';
 
-@import '../blog/_sass/base';
+@import '../_sass/base';
 
-@import '../blog/_sass/links';
-@import '../blog/_sass/positions';
-@import '../blog/_sass/clearfix';
-@import '../blog/_sass/code';
-@import '../blog/_sass/forms';
-@import '../blog/_sass/typography';
-@import '../blog/_sass/header';
-@import '../blog/_sass/tables';
-@import '../blog/_sass/animations';
-@import '../blog/_sass/footer';
-@import '../blog/_sass/social-icons';
-@import '../blog/_sass/blockquotes';
-@import '../blog/_sass/posts';
-@import '../blog/_sass/media-queries';
-@import '../blog/_sass/gists';
-@import '../blog/_sass/measure';
-@import '../blog/_sass/pagination';
+@import '../_sass/links';
+@import '../_sass/positions';
+@import '../_sass/clearfix';
+@import '../_sass/code';
+@import '../_sass/forms';
+@import '../_sass/typography';
+@import '../_sass/header';
+@import '../_sass/tables';
+@import '../_sass/animations';
+@import '../_sass/footer';
+@import '../_sass/social-icons';
+@import '../_sass/blockquotes';
+@import '../_sass/posts';
+@import '../_sass/media-queries';
+@import '../_sass/gists';
+@import '../_sass/measure';
+@import '../_sass/pagination';
