--- a/css/main.css
+++ b/css/main.css
@@ -106,3 +106,13 @@ header a:hover {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+footer{
+  background-color: #ffffff;
+  border-top: thin solid #f3f3f3 ;
+  color: black;
+  font-size: .75rem;
+  font-weight: 300;
+  padding: 2rem !default ;
+  text-align: center;
+}
