--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,22 @@ header a:hover {
     box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
 }
 
+@keyframes pulse_animation {
+	0% { transform: scale(1); }
+	20% { transform: scale(1); }
+	40% { transform: scale(1.08); }
+  60% { transform: scale(1); }
+  80% { transform: scale(1); }
+  100% { transform: scale(1); }
+}
+
+.block-anim{
+  animation-name: pulse_animation;
+	animation-duration: 1s;
+	transform-origin:70% 70%;
+	animation-timing-function: linear;
+}
+
 
 
 .block>h1>a {
