--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,9 @@ header a:hover {
     -webkit-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
     -moz-box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
     box-shadow: -5px 10px 35px 3px rgba(48, 45, 48, 0.36);
+    transition: all 0.3s ease;
 }
+
 
 .proj_block a:link {
     font-size: 25px;
